--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -9,26 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <title>CodeAdvantage | Online Computer Coding classes for Kids</title>
     <meta name="description" content="Our online coding classes lets your kid learn to code while interacting with other students and a live teacher.">
-    <link rel='dns-prefetch' href='//maps.google.com' />
-    <link rel='dns-prefetch' href='//fonts.googleapis.com' />
-    <link rel='dns-prefetch' href='//s.w.org' />
+    <link rel='dns-prefetch' href='/CA//maps.google.com' />
+    <link rel='dns-prefetch' href='/CA//fonts.googleapis.com' />
+    <link rel='dns-prefetch' href='/CA//s.w.org' />
     <link href='https://fonts.gstatic.com' crossorigin rel='preconnect' />
 
 
-    <link rel='stylesheet' id='wp-block-library-group-css' href='/css/style1.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='pb-component-blockquote-group-css' href='/css/style2.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='pb-component-feature-group-css' href='/css/style3.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='pb-component-responsive-nav-group-css' href='/css/style4.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='pb-component-space-group-css' href='/css/style5.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='rs-plugin-settings-group-css' href='/css/style6.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='wp-block-library-group-css' href='/CA/css/style1.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='pb-component-blockquote-group-css' href='/CA/css/style2.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='pb-component-feature-group-css' href='/CA/css/style3.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='pb-component-responsive-nav-group-css' href='/CA/css/style4.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='pb-component-space-group-css' href='/CA/css/style5.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='rs-plugin-settings-group-css' href='/CA/css/style6.css' type='text/css' media='all' />
 
-    <link rel='stylesheet' id='timetable_font_lato-css'  href='//fonts.googleapis.com/css?family=Lato%3A400%2C700&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='woocommerce-general-group-css' href='/css/style7.css' type='text/css' media='all' />
-            <link rel='stylesheet' href='/css/media.css' type='text/css' media='all' />
-            <link rel='stylesheet' href='/css/bootstrap-custom.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='google-font-open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-dosis-css'  href='//fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-lato-css'  href='//fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='timetable_font_lato-css'  href='/fonts.googleapis.com/css?family=Lato%3A400%2C700&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='woocommerce-general-group-css' href='/CA/css/style7.css' type='text/css' media='all' />
+            <link rel='stylesheet' href='/CA/css/media.css' type='text/css' media='all' />
+            <link rel='stylesheet' href='/CA/css/bootstrap-custom.min.css' type='text/css' media='all' />
+        <link rel='stylesheet' id='google-font-open-sans-css'  href='/fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-dosis-css'  href='/fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-lato-css'  href='/fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='olympus-google-fonts-css'  href='https://fonts.googleapis.com/css?family=Noto+Sans%3A400%2C700%2C400i%2C700i%7CPT+Mono%3A400%2C400i%7CUbuntu%3A300%2C400%2C500%2C700%2C300i%2C400i%2C500i%2C700i&#038;subset=greek-ext%2Clatin-ext%2Cvietnamese%2Clatin%2Ccyrillic-ext%2Cdevanagari%2Ccyrillic%2Cgreek&#038;display=swap&#038;ver=1.9.6' type='text/css' media='all' />
 
     <link rel="stylesheet" href="/css/stylePortal.css" type='text/css'>
