--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <title>CodeAdvantage | Online Computer Coding classes for Kids</title>
     <meta name="description" content="Our online coding classes lets your kid learn to code while interacting with other students and a live teacher.">
-    <link rel='dns-prefetch' href='/CA//maps.google.com' />
-    <link rel='dns-prefetch' href='/CA//fonts.googleapis.com' />
-    <link rel='dns-prefetch' href='/CA//s.w.org' />
+    <link rel='dns-prefetch' href='/maps.google.com' />
+    <link rel='dns-prefetch' href='/fonts.googleapis.com' />
+    <link rel='dns-prefetch' href='/s.w.org' />
     <link href='https://fonts.gstatic.com' crossorigin rel='preconnect' />
 
 
@@ -22,19 +22,19 @@
     <link rel='stylesheet' id='pb-component-space-group-css' href='/CA/css/style5.css' type='text/css' media='all' />
     <link rel='stylesheet' id='rs-plugin-settings-group-css' href='/CA/css/style6.css' type='text/css' media='all' />
 
-    <link rel='stylesheet' id='timetable_font_lato-css'  href='/fonts.googleapis.com/css?family=Lato%3A400%2C700&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='timetable_font_lato-css'  href='fonts.googleapis.com/css?family=Lato%3A400%2C700&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='woocommerce-general-group-css' href='/CA/css/style7.css' type='text/css' media='all' />
             <link rel='stylesheet' href='/CA/css/media.css' type='text/css' media='all' />
             <link rel='stylesheet' href='/CA/css/bootstrap-custom.min.css' type='text/css' media='all' />
         <link rel='stylesheet' id='google-font-open-sans-css'  href='/fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-dosis-css'  href='/fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-lato-css'  href='/fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-dosis-css'  href='fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-lato-css'  href='fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='olympus-google-fonts-css'  href='https://fonts.googleapis.com/css?family=Noto+Sans%3A400%2C700%2C400i%2C700i%7CPT+Mono%3A400%2C400i%7CUbuntu%3A300%2C400%2C500%2C700%2C300i%2C400i%2C500i%2C700i&#038;subset=greek-ext%2Clatin-ext%2Cvietnamese%2Clatin%2Ccyrillic-ext%2Cdevanagari%2Ccyrillic%2Cgreek&#038;display=swap&#038;ver=1.9.6' type='text/css' media='all' />
 
-    <link rel="stylesheet" href="/css/stylePortal.css" type='text/css'>
-    <link rel="stylesheet" href="/css/styleBlog.css" type='text/css'>
-    <link rel="stylesheet" href="/css/style_reg.css" type='text/css'>
-    <link rel="stylesheet" href="/css/tableFilter.css" type='text/css'>
+    <link rel="stylesheet" href="/CA/css/stylePortal.css" type='text/css'>
+    <link rel="stylesheet" href="/CA/css/styleBlog.css" type='text/css'>
+    <link rel="stylesheet" href="/CA/css/style_reg.css" type='text/css'>
+    <link rel="stylesheet" href="/CA/css/tableFilter.css" type='text/css'>
     <!--n2css-->
     <script type='text/javascript' src='/js/jquery.js'></script>
     <script type='text/javascript' src='/js/jquery-migrate.min.js'></script>
@@ -1294,28 +1294,28 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
     <div class="Video-PopUp-Content vp-on-pageload-wrap"></div>
 </div>
 
-<script type='text/javascript' src='/js/plugins1.js'></script>
-<script type='text/javascript' src='/js/plugins2.js'></script>
-<script type='text/javascript' src='/js/plugins3.js'></script>
-<script type='text/javascript' src='/js/plugins4.js'></script>
-<script type='text/javascript' src='/js/plugins5.js'></script>
-<script type='text/javascript' src='/js/plugins6.js'></script>
-<script type='text/javascript' src='/js/plugins7.js'></script>
+<script type='text/javascript' src='/CA/js/plugins1.js'></script>
+<script type='text/javascript' src='/CA//js/plugins2.js'></script>
+<script type='text/javascript' src='/CA//js/plugins3.js'></script>
+<script type='text/javascript' src='/CA/js/plugins4.js'></script>
+<script type='text/javascript' src='/CA/js/plugins5.js'></script>
+<script type='text/javascript' src='/CA/js/plugins6.js'></script>
+<script type='text/javascript' src='/CA/js/plugins7.js'></script>
 <script type='text/javascript'>
     /* <![CDATA[ */
     var pbOption = [];
     pbOption={"config":{"content_width":1050,"is_rtl":0}};;
     /* ]]> */
 </script>
-<script type='text/javascript' src='/js/plugins8.js'></script>
+<script type='text/javascript' src='/CA/js/plugins8.js'></script>
 <script type='text/javascript'>
     /* <![CDATA[ */
     var themeOption = [];
     themeOption={"rightClick":{"enable":"1"},"selection":{"enable":"1"},"fancyboxImage":{"padding":"10","margin":"20","min_width":"100","min_height":"100","max_width":"9999","max_height":"9999","helper_button_enable":"1","autoresize":"1","autocenter":"1","fittoview":"1","arrow":"1","close_button":"1","close_click":"0","next_click":"0","mouse_wheel":"1","autoplay":"0","loop":"1","playspeed":"3000","animation_effect_open":"fade","animation_effect_close":"fade","animation_effect_next":"elastic","animation_effect_previous":"elastic","easing_open":"easeInQuad","easing_close":"easeInQuad","easing_next":"easeInQuad","easing_previous":"easeInQuad","speed_open":"250","speed_close":"250","speed_next":"250","speed_previous":"250"},"fancyboxVideo":{"padding":"10","margin":"20","min_width":"100","min_height":"100","max_width":"9999","max_height":"9999","autoresize":"1","autocenter":"1","fittoview":"1","close_button":"1"},"goToPageTop":{"enable":"1","hash":"up","animation_enable":"1","animation_duration":"500","animation_easing":"easeInCubic"},"config":{"theme_url":"https:\/\/wp.codeadvantage.org\/wp-content\/themes\/fable\/","is_rtl":0,"woocommerce_enable":1}};;
     /* ]]> */
 </script>
-<script type='text/javascript' src='/js/plugins9.js'></script>
-    <script type='text/javascript' src='/js/media.js?v=10'></script>
+<script type='text/javascript' src='/CA/js/plugins9.js'></script>
+    <script type='text/javascript' src='/CA/js/media.js?v=10'></script>
 
 </body>
 
