--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -24,9 +24,9 @@
 
     <link rel='stylesheet' id='timetable_font_lato-css'  href='fonts.googleapis.com/css?family=Lato%3A400%2C700&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='woocommerce-general-group-css' href='/CA/css/style7.css' type='text/css' media='all' />
-            <link rel='stylesheet' href='/CA/css/media.css' type='text/css' media='all' />
-            <link rel='stylesheet' href='/CA/css/bootstrap-custom.min.css' type='text/css' media='all' />
-        <link rel='stylesheet' id='google-font-open-sans-css'  href='/fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' href='/CA/css/media.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='/CA/css/bootstrap-custom.min.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-open-sans-css'  href='/fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='google-font-dosis-css'  href='fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='google-font-lato-css'  href='fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='olympus-google-fonts-css'  href='https://fonts.googleapis.com/css?family=Noto+Sans%3A400%2C700%2C400i%2C700i%7CPT+Mono%3A400%2C400i%7CUbuntu%3A300%2C400%2C500%2C700%2C300i%2C400i%2C500i%2C700i&#038;subset=greek-ext%2Clatin-ext%2Cvietnamese%2Clatin%2Ccyrillic-ext%2Cdevanagari%2Ccyrillic%2Cgreek&#038;display=swap&#038;ver=1.9.6' type='text/css' media='all' />
@@ -36,9 +36,9 @@
     <link rel="stylesheet" href="/CA/css/style_reg.css" type='text/css'>
     <link rel="stylesheet" href="/CA/css/tableFilter.css" type='text/css'>
     <!--n2css-->
-    <script type='text/javascript' src='/js/jquery.js'></script>
-    <script type='text/javascript' src='/js/jquery-migrate.min.js'></script>
-    <script type='text/javascript' src='/js/plugins10.js'></script>
+    <script type='text/javascript' src='/CA/js/jquery.js'></script>
+    <script type='text/javascript' src='/CA/js/jquery-migrate.min.js'></script>
+    <script type='text/javascript' src='/CA/js/plugins10.js'></script>
 
     <script type='text/javascript'>
         var video_popup_unprm_general_settings = {
@@ -1089,8 +1089,8 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
                 #responsiveTable td:before { content: attr(data-title); }
             }
         </style>
-        <script src="/js/moment.min.js"></script>
-        <script src="/js/moment-timezone-with-data-10-year-range.min.js"></script>
+        <script src="/CA/js/moment.min.js"></script>
+        <script src="/CA/js/moment-timezone-with-data-10-year-range.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
         <script>
             jQuery(document).ready(function($){
