--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <title>CodeAdvantage | Online Computer Coding classes for Kids</title>
     <meta name="description" content="Our online coding classes lets your kid learn to code while interacting with other students and a live teacher.">
-    <link rel='dns-prefetch' href='/maps.google.com' />
-    <link rel='dns-prefetch' href='/fonts.googleapis.com' />
-    <link rel='dns-prefetch' href='/s.w.org' />
+    <link rel='dns-prefetch' href='maps.google.com' />
+    <link rel='dns-prefetch' href='fonts.googleapis.com' />
+    <link rel='dns-prefetch' href='s.w.org' />
     <link href='https://fonts.gstatic.com' crossorigin rel='preconnect' />
 
 
@@ -26,7 +26,7 @@
     <link rel='stylesheet' id='woocommerce-general-group-css' href='/CA/css/style7.css' type='text/css' media='all' />
     <link rel='stylesheet' href='/CA/css/media.css' type='text/css' media='all' />
     <link rel='stylesheet' href='/CA/css/bootstrap-custom.min.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-open-sans-css'  href='/fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-open-sans-css'  href='fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='google-font-dosis-css'  href='fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='google-font-lato-css'  href='fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='olympus-google-fonts-css'  href='https://fonts.googleapis.com/css?family=Noto+Sans%3A400%2C700%2C400i%2C700i%7CPT+Mono%3A400%2C400i%7CUbuntu%3A300%2C400%2C500%2C700%2C300i%2C400i%2C500i%2C700i&#038;subset=greek-ext%2Clatin-ext%2Cvietnamese%2Clatin%2Ccyrillic-ext%2Cdevanagari%2Ccyrillic%2Cgreek&#038;display=swap&#038;ver=1.9.6' type='text/css' media='all' />
@@ -1295,8 +1295,8 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
 </div>
 
 <script type='text/javascript' src='/CA/js/plugins1.js'></script>
-<script type='text/javascript' src='/CA//js/plugins2.js'></script>
-<script type='text/javascript' src='/CA//js/plugins3.js'></script>
+<script type='text/javascript' src='/CA/js/plugins2.js'></script>
+<script type='text/javascript' src='/CA/js/plugins3.js'></script>
 <script type='text/javascript' src='/CA/js/plugins4.js'></script>
 <script type='text/javascript' src='/CA/js/plugins5.js'></script>
 <script type='text/javascript' src='/CA/js/plugins6.js'></script>
