--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -26,9 +26,9 @@
     <link rel='stylesheet' id='woocommerce-general-group-css' href='/CA/css/style7.css' type='text/css' media='all' />
     <link rel='stylesheet' href='/CA/css/media.css' type='text/css' media='all' />
     <link rel='stylesheet' href='/CA/css/bootstrap-custom.min.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-open-sans-css'  href='fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-dosis-css'  href='fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
-    <link rel='stylesheet' id='google-font-lato-css'  href='fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-open-sans-css'  href='https://fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic&#038;subset=cyrillic-ext%2Ccyrillic%2Cvietnamese%2Cgreek-ext%2Clatin%2Cgreek%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-dosis-css'  href='https://fonts.googleapis.com/css?family=Dosis%3A200%2C300%2Cregular%2C500%2C600%2C700%2C800&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
+    <link rel='stylesheet' id='google-font-lato-css'  href='https://fonts.googleapis.com/css?family=Lato%3A100%2C100italic%2C300%2C300italic%2Cregular%2Citalic%2C700%2C700italic%2C900%2C900italic&#038;subset=latin%2Clatin-ext&#038;ver=5.2.2' type='text/css' media='all' />
     <link rel='stylesheet' id='olympus-google-fonts-css'  href='https://fonts.googleapis.com/css?family=Noto+Sans%3A400%2C700%2C400i%2C700i%7CPT+Mono%3A400%2C400i%7CUbuntu%3A300%2C400%2C500%2C700%2C300i%2C400i%2C500i%2C700i&#038;subset=greek-ext%2Clatin-ext%2Cvietnamese%2Clatin%2Ccyrillic-ext%2Cdevanagari%2Ccyrillic%2Cgreek&#038;display=swap&#038;ver=1.9.6' type='text/css' media='all' />
 
     <link rel="stylesheet" href="/CA/css/stylePortal.css" type='text/css'>
@@ -48,7 +48,7 @@
 
 
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="shortcut icon" href="/CA/favicon.ico" type="image/vnd.microsoft.icon" />
     <script type="text/javascript">function setREVStartSize(e){
             try{ e.c=jQuery(e.c);var i=jQuery(window).width(),t=9999,r=0,n=0,l=0,f=0,s=0,h=0;
                 if(e.responsiveLevels&&(jQuery.each(e.responsiveLevels,function(e,f){f>i&&(t=r=f,l=e),i>f&&f>r&&(r=f,n=e)}),t>r&&(l=n)),f=e.gridheight[l]||e.gridheight[0]||e.gridheight,s=e.gridwidth[l]||e.gridwidth[0]||e.gridwidth,h=i/s,h=h>1?1:h,f=Math.round(h*f),"fullscreen"==e.sliderLayout){var u=(e.c.width(),jQuery(window).height());if(void 0!=e.fullScreenOffsetContainer){var c=e.fullScreenOffsetContainer.split(",");if (c) jQuery.each(c,function(e,i){u=jQuery(i).length>0?u-jQuery(i).outerHeight(!0):u}),e.fullScreenOffset.split("%").length>1&&void 0!=e.fullScreenOffset&&e.fullScreenOffset.length>0?u-=jQuery(window).height()*parseInt(e.fullScreenOffset,0)/100:void 0!=e.fullScreenOffset&&e.fullScreenOffset.length>0&&(u-=parseInt(e.fullScreenOffset,0))}f=u}else void 0!=e.minHeight&&f<e.minHeight&&(f=e.minHeight);e.c.closest(".rev_slider_wrapper").css({height:f})
@@ -99,7 +99,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
         <div class="pb-logo">
 
             <a href="/" title="CodeAdvantage ">
-                <img src="/images/logor.png" alt="CodeAdvantage "/>
+                <img src="/CA/images/logor.png" alt="CodeAdvantage "/>
             </a>
 
         </div>
@@ -306,7 +306,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
     <div class="theme-page-content theme-clear-fix">
         
         <div id="pb_line_6513632B55EFFC492B04F632965F61DE"  class="pb-line pb-clear-fix sectionheader" style="
-        background-image: url(/uploads/online-class.jpg); background-position: 50% 100%; background-size:  cover;padding-top:60px;padding-bottom:60px;">
+        background-image: url(/CA/uploads/online-class.jpg); background-position: 50% 100%; background-size:  cover;padding-top:60px;padding-bottom:60px;">
             <ul class="pb-layout pb-layout-100 pb-reset-list pb-clear-fix pb-main">
                 <li class="pb-layout-column-left">
                     <div class="pb-space-line"></div>
@@ -1234,7 +1234,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
                         <div class="pb-space-line"></div>
                         <div class="pb-space pb-clear-fix" style="height:40px;"></div>
                         <div class="pb-text">
-                            <div style="text-align: center;"><img class="size-medium wp-image-2206 aligncenter" src="/uploads/divider-1-300x23-1.png" alt="" width="300" height="auto" /></div>
+                            <div style="text-align: center;"><img class="size-medium wp-image-2206 aligncenter" src="/CA/uploads/divider-1-300x23-1.png" alt="" width="300" height="auto" /></div>
                         </div>
                         <div class="pb-space-line"></div>
                         <div class="pb-space pb-clear-fix" style="height:40px;">
@@ -1246,15 +1246,15 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
 
 
 <div class="theme-footer theme-clear-fix">
-    <div class="theme-footer-top theme-clear-fix" style="background-image:url('/uploads/Untitled-2.png');background-repeat:no-repeat;background-position:bottom;background-size:contain;">
+    <div class="theme-footer-top theme-clear-fix" style="background-image:url('/CA/uploads/Untitled-2.png');background-repeat:no-repeat;background-position:bottom;background-size:contain;">
 
         <div class="theme-main theme-layout-25x25x25x25">
             <div id="text-31" class="widget_text theme-clear-fix theme-widget theme-layout-column-left">			<div class="textwidget"><div style="color: white; font-size: 80%;">Phone: 833.210.CODE<br />
                         Email: office@codeadvantage.org<br>Copyright © 2015-2020<br />CodeAdvantage®<br />
                         <a style="font-size: 100%;" href="/contact">Contact us</a><br />
                         <br />
-                        <a href="https://www.facebook.com/codeadvantage.org" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/uploads/facebook.png" alt="facebook" width="32" height="32" /></a>
-                        <a href="https://www.instagram.com/codeadvantage" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/uploads/inst.png" alt="instagram" width="32"  height="32" /></a>
+                        <a href="https://www.facebook.com/codeadvantage.org" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/CA/uploads/facebook.png" alt="facebook" width="32" height="32" /></a>
+                        <a href="https://www.instagram.com/codeadvantage" target="_blank" rel="noopener noreferrer"><img class="alignnone size-full wp-image-3193" src="/CA/uploads/inst.png" alt="instagram" width="32"  height="32" /></a>
 
                     </div>
                 </div>
