--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -22,6 +22,10 @@
         color: #52d0f1;
     }
 }
+.clicked {
+    font-weight: bold;
+    text-decoration-color: #52d0f1;
+}
 .ClassesFilterButton{
     position: absolute;
     top: 0px;
