--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -360,22 +360,28 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
                                     <span class="GradesFilterButton  filterTable__btn" style="width: 150px; margin-right: 15px;">Filter by Grade Level</span> 
                                     <form name="FilterFormGrades" class="FilterFormGrades filterTable__form" action="" method="">
                                         <div class="filterForm__wrapper">
-                                            <input type="checkbox" name="filterStatus" value="1st" />
-                                            <label for="filter_1">1st</label>
-                                            <input type="checkbox" name="filterStatus" value="2nd" />
-                                            <label for="filter_2">2nd</label>
-                                            <input type="checkbox" name="filterStatus" value="3rd" />
-                                            <label for="filter_3">3rd</label>
-                                            <input type="checkbox" name="filterStatus" value="4th" />
-                                            <label for="filter_4">4th</label>
-                                            <input type="checkbox" name="filterStatus" value="5th" />
-                                            <label for="filter_5">5th</label>
-                                            <input type="checkbox" name="filterStatus" value="6th" />
-                                            <label for="filter_6">6th</label>
-                                            <input type="checkbox" name="filterStatus" value="7th" />
-                                            <label for="filter_7">7th</label>
-                                            <input type="checkbox" name="filterStatus" value="8-10th" />
-                                            <label for="filter_8">8-10th</label>
+                                            <div class="filterForm__wrapper">
+                                                <input type="checkbox" name="filterStatus" value="1st" />
+                                                <label for="filter_1">1st</label>
+                                                <input type="checkbox" name="filterStatus" value="2nd" />
+                                                <label for="filter_2">2nd</label>
+                                                <input type="checkbox" name="filterStatus" value="3rd" />
+                                                <label for="filter_3">3rd</label>
+                                                <input type="checkbox" name="filterStatus" value="4th" />
+                                                <label for="filter_4">4th</label>
+                                                <input type="checkbox" name="filterStatus" value="5th" />
+                                                <label for="filter_5">5th</label>
+                                                <input type="checkbox" name="filterStatus" value="6th" />
+                                                <label for="filter_6">6th</label>
+                                                <input type="checkbox" name="filterStatus" value="7th" />
+                                                <label for="filter_7">7th</label>
+                                                <input type="checkbox" name="filterStatus" value="8th" />
+                                                <label for="filter_8">8th</label>
+                                                <input type="checkbox" name="filterStatus" value="9th" />
+                                                <label for="filter_8">9th</label>
+                                                <input type="checkbox" name="filterStatus" value="10th" />
+                                                <label for="filter_8">10th</label>
+                                            </div>
                                         </div>
                                     </form>
                                 </div> 
@@ -893,8 +899,6 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
                                                         <span class="GradesFilterButton  filterTable__btn" style="width: 150px; margin-right: 15px;">Filter by Grade Level</span> 
                                                         <form name="FilterFormGrades" class="FilterFormGrades filterTable__form" action="" method="">
                                                             <div class="filterForm__wrapper">
-                                                                <input type="checkbox" name="filterStatus" value="0th" />
-                                                                <label for="filter_0">K</label>
                                                                 <input type="checkbox" name="filterStatus" value="1st" />
                                                                 <label for="filter_1">1st</label>
                                                                 <input type="checkbox" name="filterStatus" value="2nd" />
@@ -1245,8 +1249,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
                                                         <span class="GradesFilterButton  filterTable__btn" style="width: 150px; margin-right: 15px;">Filter by Grade Level</span> 
                                                         <form name="FilterFormGrades" class="FilterFormGrades filterTable__form" action="" method="">
                                                             <div class="filterForm__wrapper">
-                                                                <input type="checkbox" name="filterStatus" value="0th" />
-                                                                <label for="filter_0">K</label>
+                                                            
                                                                 <input type="checkbox" name="filterStatus" value="1st" />
                                                                 <label for="filter_1">1st</label>
                                                                 <input type="checkbox" name="filterStatus" value="2nd" />
