--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -1,5 +1,6 @@
 .filterTable{
     position: relative;
+    margin-bottom: 10px;
 }
 .filterTable__form{
         display: none; 
@@ -8,26 +9,38 @@
     }
 }
 .filterForm__wrapper{
-    align-items: center;
     margin-left: -15px;
     display: flex;
+    flex-wrap: wrap;
+    margin-top: 15px;
+    label {
+        display: flex;
+        align-items: center;
+    }
 }
 .filterTable__btn {
-    color: orangered;
-    text-decoration: underline;
-    text-decoration-style: dashed;
+    color: black;
     font-size: smaller;
+    background-color:#cfcfcf;
+    display: block;
+    height: 30px;
+    width: 135px;
+    text-align: center;
+    line-height: 30px;
     cursor: pointer;
     &:hover{
-        color: #52d0f1;
+        background-color: #52d0f1;
+        color: white;
     }
 }
 .clicked {
     font-weight: bold;
-    text-decoration-color: #52d0f1;
+    // text-decoration-color: #52d0f1;
+    background-color: #52d0f1;
+    color: white;
 }
 .ClassesFilterButton{
     position: absolute;
     top: 0px;
-    left: 150px;
+    left: 165px;
 }
