--- a/templates/page/page.html
+++ b/templates/page/page.html
@@ -98,7 +98,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
         <div class="submenuWrapper">
             <a href="" class="submenuLink">833.210.CODE</a>
             <a href="" class="submenuLink">office@codeadvantage.org</a>
-            <a href="" class="portalBtn">Portal</a>
+            <a href="" class="portalBtn">Portal Log In</a>
         </div>
     </div>
 </div>
