--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -878,7 +878,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
                                                         <div class="GradesFilterButton  filterTable__btn">Filter by Grade Level</div> 
                                                         <form name="FilterFormGrades" class="FilterFormGrades filterTable__form" action="" method="">
                                                             <div class="filterForm__wrapper">
-                                                                
+                                                                <label for="filter_1"><input type="checkbox" name="filterStatus" value="K" />K</label>
                                                                 <label for="filter_1"><input type="checkbox" name="filterStatus" value="1st" />1st</label>
                                                                 <label for="filter_2"><input type="checkbox" name="filterStatus" value="2nd" />2nd</label>
                                                                 <label for="filter_3"><input type="checkbox" name="filterStatus" value="3rd" />3rd</label>
