--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -1381,6 +1381,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
         
                         function detectRange(str) {
                             var parts = str.split("-");
+                            console.log(parseInt(parts[0]),parseInt(parts[1]))
                             return [parseInt(parts[0]), parseInt(parts[1])];
                         }
         
