--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -1385,6 +1385,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
                                 parts[0] = 0;
                                 console.log("K:" + parts[0])
                             }
+                            console.log(parts[0],parts[1])
                             console.log(parseInt(parts[0]),parseInt(parts[1]))
                             return [parseInt(parts[0]), parseInt(parts[1])];
                         }
