--- a/templates/page/tablefilter.html
+++ b/templates/page/tablefilter.html
@@ -1381,7 +1381,7 @@ src="https://www.facebook.com/tr?id=191358722010157&ev=PageView
         
                         function detectRange(str) {
                             var parts = str.split("-");
-                            if (parts[0] == 'K'){
+                            if (parts[0] == "K "){
                                 console.log("Error K NaN")
                                 parts[0] = '0';
                                 
